Fix margins on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ body {
 }
 
 .content {
+  width: 90%;
   padding: 0rem;
   max-width: 800px;
   margin: auto;
